--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://acianeta.github.io/portfolio/"> Portfolio</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://acianeta.github.io/portfolio/"> <span>Portfolio</span></li></a>
                   <li><i class="bi bi-chevron-right"></i> <strong>Contato:</strong> <span>86 9 9550-4476</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Local:</strong> <span>Teresina, Piauí</span></li>
                 </ul>
